# mcz

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: index.html  playground.html
js/: .npmrc  browser.ts  bunle.min.js  index.ts  mcz.min.js  package.json
mockups/: w3.html
site/: astro.config.mjs  package-lock.json  package.json
site/functions/cdn/: [[path]].ts
site/public/: _redirects  robots.txt
site/src/: content.config.ts
site/src/components/: Author.astro  Creator.svelte  Creator.vue  Inspector.svelte  Inspector.vue  Playground.svelte  Playground.vue
site/src/content/blog/: building-manga-reader-web.md  cbz-alternative-web-delivery.md  designing-binary-file-format.md  http-range-requests-image-streaming.md  image-container-format-for-web.md  lazy-load-images-without-layout-shift.md  mcz-format-specification.md  product-image-gallery-ecommerce.md  reduce-cls-image-heavy-pages.md  share-photo-gallery-with-clients.md  stream-images-single-http-request.md  webp-vs-jpeg-vs-jxl-manga-images.md  why-mcz-not-zip.md  zero-cls-image-loading.md
site/src/layouts/: Base.astro  Prose.astro
site/src/lib/: mcz.ts  utils.ts  zip.ts
site/src/pages/: index.astro
site/src/pages/about/: index.astro
site/src/pages/blog/: [id].astro  index.astro
site/src/pages/contact/: index.astro
site/src/pages/creator/: index.astro
site/src/styles/: global.css
src/: format.rs  lib.rs  main.rs  pack.rs
tools/: polyglot.py
worker/: wrangler.toml
worker/src/: index.ts
(+6 files in other folders)
