[package]
name = "bunle"
version = "0.1.0"
edition = "2021"
description = "Bunle — Image container format. Single-file, streamable via HTTP Range."

[lib]
name = "bunle"
path = "src/lib.rs"

[[bin]]
name = "bunle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"], optional = true }
webp = { version = "0.3", optional = true }
rayon = { version = "1", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:image", "dep:webp", "dep:rayon"]
